tests/sources/invalid/expressions/compound_assignment_missing_rhs.fire
// Parser error: compound assignment with no expression after the operator.

fn compound_assignment_missing_rhs() -> void {  //~ ERROR FS-PARSE-0010 @46
    x: int32 = 5;
    x +=;  //~ ERROR FS-PARSE-0012 @9
//~^ ERROR FS-PARSE-0010 @10
}
